--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             </tr>
             <tr>
-                <td><button class="btn "onclick="insert('.')">0</button></td>
+                <td><button class="btn "onclick="insert('0')">0</button></td>
                 <td><button class="btn "onclick="insert('.')">.</button></td>
                 <td><button class="btn equal op " style="width: 106px;"onclick="equal()">=</button></td>
 
